<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_chandigarh_description">Chandigarh, the capital of the northern Indian
        states of Punjab and Haryana, was designed by the Swiss-French modernist architect
        , <b>Le Corbusier</b>. His buildings include the Capitol Complex with its High Court
        , Secretariat and Legislative Assembly, as well as the giant Open Hand Monument.
        The nearby Rock Garden is a park featuring sculptures made of stones, recycled
        ceramics and industrial relics.
    </string>
    <string name="image_of_chandigarh">Image of chandigarh</string>
    <string name="chandigarh_logo">Chandigarh Logo (Open Hand Manument)</string>
    <string name="chandigarh_gov_in">chandigarh.gov.in</string>
    <string name="rock_garden">Rock Garden</string>
    <string name="sukhna_lake">Sukhna Lake</string>
    <string name="elante_mall">Elante Mall</string>
    <string name="contact">Contact</string>
    <string name="about_developer">About Developer</string>
    <string name="rose_garden">Rose Garden</string>
    <string name="communicate">Communicate</string>
    <string name="sukhna_lake_description">Sukhna Lake in Chandigarh, India, is a reservoir at the 
        foothills of the Himalayas. This 3 km² rainfed lake was created in 1958 by damming the 
        Sukhna Choe, a seasonal stream coming down from the Shivalik Hills</string>
    <string name="more">More</string>
    <string name="elante_description">Elante Mall is a shopping mall in the city of Chandigarh in 
        India. With the gross leasable area of 1,150,000 sq ft, it is the second largest shopping 
        mall in Northern India and the eleventh largest in India. Elante is spread over an area 
        of 20 acres. It is part of a mixed use real estate development project by Larsen and 
        Toubro called Elante.</string>
    <string name="rock_garden_description">The Rock Garden of Chandigarh is a sculpture garden in 
        Chandigarh, India. It is also known as Nek Chand\'s Rock Garden after its founder Nek Chand
        , a government official who started the garden secretly in his spare time in 1957. Today it
        is spread over an area of 40 acres. It is completely built of industrial and home waste and
        thrown-away items.</string>
    <string name="rose_garden_description">Zakir Hussain Rose Garden, is a botanical garden in 
        Chandigarh, India and spread over 30 acres of land, with 50,000 rose-bushes of 1600 
        different species. Named after India\'s former president, Zakir Hussain and created 
        in 1967 under the guidance of Dr Dr M.S.Randhawa, Chandigarh\'s first chief commissioner
        , the garden has the distinction of being Asia\'s largest. The garden has not only roses
        , but also trees of medicinal value. Some of the medicinal plants that can be spotted 
        here are bel, bahera, harar, camphor and yellow gulmohar. The rose plants have been 
        planted in carved-out lawns and flower beds</string>
    <string name="about_sonu_tiwari">I am a Computer Science and engineering graduate of 2018 and 
        Google challenge scholarship student of Android Basics nanodegree.</string>
    <string name="image">Image</string>
    <string name="famous_places">Famous Places</string>
    <string name="about_chandigarh">About Chandigarh</string>
    <string name="food_zone">Food Zone</string>
    <string name="shop_mania">Shop Mania</string>
    <string name="place_image">Place Image</string>
    <string name="chandigarh">Chandigarh</string>
    <string name="welcome_to_chandigarh">Welcome to Chandigarh</string>
    <string name="welcome_text">Welcome to city beautiful. New to the city? lets take a look on
        places to eat or places to go and visit. Just click the navigation bar and start exploring.
    </string>
    <string name="address">Address</string>
    <string name="my_contact">+919056360543</string>
    <string name="famous_restaurants">Famous Restaurants</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="sonu_liked_profile">https://www.linkedin.com/in/sonu-tiwari/</string>
    <string name="wiki_cdg">https://en.wikipedia.org/wiki/Chandigarh</string>
    <string name="name_elante">Elante Mall</string>
    <string name="address_elante">Plot No. 177/178A, Purv Marg, Industrial Area Phase 1, MW Area
        , Chandigarh, 160002</string>
    <string name="opening_hrs_elante">11AM-9:30AM</string>
    <string name="name_sm">Shashtri market</string>
    <string name="address_sm">Sector 22 Market road sector 22 Chandigarh 160022</string>
    <string name="opening_hrs_sm">Closes at 9PM</string>
    <string name="no_ph_no">No Phone No</string>
    <string name="name_tdi">TDI Mall</string>
    <string name="address_tdi">TDI MALL, 17D, Sector 17, Chandigarh, 160017</string>
    <string name="opening_hrs_tdi">Closes at 12AM</string>
    <string name="name_gp">Glass Palace</string>
    <string name="address_gp">SCO-43, Madhya Marg, Sector 7-C, Chandigarh, 160019</string>
    <string name="opening_hrs_gp">Closes 8PM</string>
    <string name="name_rg">Rock Garden</string>
    <string name="wiki_rg">https://en.wikipedia.org/wiki/Rock_Garden_of_Chandigarh</string>
    <string name="name_rose">Rose Garden</string>
    <string name="wiki_rosse">https://en.wikipedia.org/wiki/Zakir_Hussain_Rose_Garden</string>
    <string name="name_sl">Sukhna Lake</string>
    <string name="wiki_sl">https://en.wikipedia.org/wiki/Sukhna_Lake</string>
    <string name="wiki_elante">https://en.wikipedia.org/wiki/Elante_Mall</string>
    <string name="name_swagath">Swagath Restaurant And Bar</string>
    <string name="desc_swagath">Mangalorean, Chettinad, Malabari and Mughlai seafood dishes
        served in a refined dining room.</string>
    <string name="address_swagath">SCO No.7, Madhya Marg, Sector 26, Chandigarh, 160019</string>
    <string name="name_virgin">Virgin Courtyard</string>
    <string name="desc_virgin">Mediterranean-style courtyard terrace restaurant offering a selection of Italian dishes and wines.</string>
    <string name="address_virgin">SCO 1A, Madhya Marg, Sector 7-C, Sector 7C, Chandigarh, 160007</string>
    <string name="name_pal">Pal Dhaba Chandigarh</string>
    <string name="desc_pal">Established in 1968, this classic dhaba venue serves typical northern Indian fare with no fuss</string>
    <string name="address_pal">SCO No.7, Madhya Marg, Sector 26, Chandigarh, 160019</string>
    <string name="name_gng">Garlic And Greens</string>
    <string name="desc_gng">One of the best location to enjoy your delicious food at Elante mall Chandigarh.</string>
    <string name="address_gng">178–178A, Purv Marg, Industrial Area Phase I, Chandigarh, 160002</string>
    <string name="famous_hotels">Famous Hotels</string>
    <string name="name_jw">JW Marriott Hotel Chandigarh</string>
    <string name="address_jw">Plot no: 6, Dakshin Marg, 35B, Sector 35, Chandigarh, 160035</string>
    <string name="name_lalit">The LaLiT Chandigarh</string>
    <string name="address_lalit">Rajiv Gandhi IT Park, DLF Commercial Complex, Chandigarh, 160101</string>
    <string name="hotels">Hotels</string>
</resources>
