<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/places_to_visit"
            android:icon="@drawable/ic_place"
            android:title="@string/famous_places" />
        <item
            android:id="@+id/food_zone"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/food_zone" />
        <item
            android:id="@+id/shop_mania"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop_mania" />
        <item
            android:id="@+id/hotels"
            android:icon="@drawable/ic_hotel"
            android:title="@string/hotels" />
        <item
            android:id="@+id/about_the_city"
            android:icon="@drawable/ic_info"
            android:title="@string/about_chandigarh" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/about_developer"
                android:icon="@drawable/ic_person"
                android:title="@string/about_developer" />
        </menu>
    </item>

</menu>
