<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutChandigarhActivity"
    tools:showIn="@layout/app_bar_about_chandigarh">

    <!-- Scrollbar supports only one child hence this layout will be direct children.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/about_chandigarh"
            android:textColor="@color/red"
            android:textSize="42sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/image_of_chandigarh"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_chandigarh_description"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/more" />

    </LinearLayout>

</ScrollView>