<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutDeveloperActivity">

    <!-- Scroll view supports only one children, hence this layout will serve the purpose. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/sukhna_lake"
            android:src="@drawable/sonu_tiwari" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_sonu_tiwari"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/more" />

    </LinearLayout>

</ScrollView>