<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/red"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <!-- Since card view supports only one children. this will act as single container. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <!--Image of famous places goes here. -->
        <ImageView
            android:id="@+id/image_famous_places"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/place_image"
            android:scaleType="fitXY"
            android:src="@drawable/sukhna_lake" />

        <!--Name of place goes here.-->
        <TextView
            android:id="@+id/txt_name_of_the_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/chandigarh"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp" />

        <!--Description of the place goes here. -->
        <TextView
            android:id="@+id/txt_description_of_the_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rose_garden_description"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <!--For more this button will take user to wiki page.-->
        <Button
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/more" />

    </LinearLayout>

</android.support.v7.widget.CardView>