<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/red"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <!-- Since card view supports only one children. this will act as single container. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <!--Name of shopping mall goes here.-->
        <TextView
            android:id="@+id/txt_name_of_mall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/chandigarh"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp" />

        <!--Address of mall goes here. -->
        <TextView
            android:id="@+id/txt_address_of_mall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_address"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <!--Description goes here.-->
        <TextView
            android:id="@+id/txt_opening_hrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_access"
            android:text="@string/opening_hours"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <!--Contact of the restaurant goes here.-->
        <TextView
            android:id="@+id/txt_shopping_mall_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="phone"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_contact_phone"
            android:text="@string/my_contact"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>